apps/media-stack/sonarr/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media-stack
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: media-stack-https-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
